# friday-examples

./: README.md  changelog  friday-examples.cabal
src/: Canny.hs  Delayed.hs  GaussianBlur.hs  Histogram.hs  Otsu.hs  ResizeImage.hs  SCW.hs
